--- a/index.html
+++ b/index.html
@@ -2,9 +2,18 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Hello</title>
+<title>my page</title>
 </head>
 <body>
-Hello world!
+</body><left><h1>Комбарова Полина</h1></left>
+<left><img alt="Это я" width="15%" src="me.jpg"></left>
+<br/>
+<h2>Контакты:</h2>
+Страница <a href=https://vk.com/kleipp/>vkontakte</a>
+<br/>
+Телефон: <b>+79066089566</b>
+  <br/>
+  E-mail: <i>polya.kombarova@gmail.com</i>
 </body>
 </html>
+
