--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <h2>Контакты:</h2>
 Страница <a href=https://vk.com/kleipp/>vkontakte</a>
 <br/>
+<a href=https://github.com/username>GitHub</a>
+<br/>
 Телефон: <b>+79066089566</b>
 <br/>
 E-mail: <i>polya.kombarova@gmail.com</i>
