--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h2>Контакты:</h2>
 Страница <a href=https://vk.com/kleipp/>vkontakte</a>
 <br/>
-<a href=https://github.com/username>GitHub</a>
+<a href=https://github.com/ppssdd52>GitHub</a>
 <br/>
 Телефон: <b>+79066089566</b>
 <br/>
